--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -6,6 +6,7 @@
 	text-align: center;
 	cursor: pointer;
 	word-spacing: normal;
+	overflow: hidden;
 }
 
 .btn-generic {
@@ -19,11 +20,7 @@
 	color: rgba(0, 0, 0, 0.8); /* rgba supported */
 	border: 1px solid #999; /*IE 6/7/8*/
 	border: none rgba(0, 0, 0, 0); /*IE9 + everything else*/
-	// background-color: #e6e6e6;
-	// background-image: linear-gradient(
-	// 	var(--orange-linear) 40%,
-	// 	var(--yellow-linear)
-	// );
+
 	background: rgb(250, 150, 1);
 	background: linear-gradient(
 		90deg,
@@ -32,7 +29,7 @@
 	);
 
 	text-decoration: none;
-	border-radius: 0.3rem;
+	border-radius: 2rem;
 
 	&:hover,
 	&:focus {
