--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -2,6 +2,7 @@
 @import "abstracts/mixin";
 @import "base/typography";
 @import "animations/gallAnimation";
+@import "components/navbar";
 @import "components/modal";
 @import "components/slider";
 @import "components/typewriter";
@@ -9,12 +10,11 @@
 @import "components/button";
 @import "intersectionClasses/intersectionClasses";
 
-@import "navbar";
-@import "header";
-@import "projects";
-@import "card";
-@import "gallery";
-@import "about";
-@import "contact";
-@import "testimonial";
-@import "footer";
+@import "pages/header";
+@import "pages/projects";
+@import "pages/card";
+@import "pages/gallery";
+@import "pages/about";
+@import "pages/contact";
+@import "pages/testimonial";
+@import "pages/footer";
