--- a/views/footer/form.ejs
+++ b/views/footer/form.ejs
@@ -43,11 +43,12 @@
 			autocomplete="off" 
 			cols="30" 
 			rows="10" 
-			placeholder="Comment Max characters 140" 
 			maxlength="140"
 			onfocus="this.value='';"
 			pattern="[A-Z a-z]{140}"
-			class="form__textarea">
+			class="form__textarea"
+			placeholder="Comment Max characters 140" 
+		>
 		</textarea>
 		<label 
 			for="comment" 
@@ -56,7 +57,7 @@
 			Comment
 		</label>
 		<!-- <div class="form__group"> -->
-			<button class="btn btn-generic">
+			<button class="btn btn-generic" id="form-button">
 				Submit
 			</button>
 		<!-- </div> -->
