--- a/views/body/service.ejs
+++ b/views/body/service.ejs
@@ -34,9 +34,9 @@
                card__side--bottom-3">
         <div class="card__cta">
           <a 
-          class="btn btn-generic"
+          class="btn btn-expand"
           id="expandBtn--1">
-          Expand
+          +
           </a>
         </div>
       </div>
@@ -81,9 +81,9 @@
              card__side--bottom-3">
       <div class="card__cta">
         <a 
-          class="btn btn-generic"
+          class="btn btn-expand"
           id="expandBtn--2">
-          Expand
+          +
           </a>
       </div>
     </div>
@@ -145,9 +145,9 @@
                card__side--bottom-3">
         <div class="card__cta">
           <a 
-          class="btn btn-generic"
+          class="btn btn-expand"
           id="expandBtn--3">
-          Expand
+          +
           </a>
         </div>
       </div>
