--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,6 +83,21 @@ h2 {
   font-size: 3rem;
   text-transform: uppercase; }
 
+h3 {
+  text-align: center;
+  font-size: 2.3rem;
+  text-transform: uppercase; }
+
+h4 {
+  text-align: center;
+  font-size: 1.9rem;
+  text-transform: uppercase; }
+
+h5 {
+  text-align: center;
+  font-size: 1.6rem;
+  text-transform: uppercase; }
+
 @keyframes zoom {
   from {
     transform: scale(0.1); }
@@ -464,6 +479,27 @@ h2 {
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
     border-color: #000; }
 
+.btn-expand {
+  width: 8%;
+  height: 20%;
+  margin: 0 auto 0 auto;
+  font-family: inherit;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5em 1em;
+  color: #444;
+  /* rgba not supported (IE 8) */
+  color: rgba(0, 0, 0, 0.8);
+  /* rgba supported */
+  border: 1px solid black;
+  background: white;
+  text-decoration: none; }
+  .btn-expand:focus {
+    outline: 0; }
+  .btn-expand:active {
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
+    border-color: #000; }
+
 .title {
   transition: all 1s;
   opacity: 0;
@@ -544,23 +580,19 @@ h2 {
   position: relative;
   height: auto;
   width: 90%; }
+  .card:not(:last-child) {
+    margin-bottom: 3rem; }
   .card__side {
     height: auto;
-    margin-top: 3rem;
     position: relative;
     width: 100%;
-    border-radius: 3px;
+    border-bottom-left-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side--upper {
       background-color: #fff; }
-    .card__side--bottom-1 {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
-    .card__side--bottom-2 {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9)); }
-    .card__side--bottom-3 {
-      background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
-      margin: -2rem 0 0 0; }
+    .card__side--bottom {
+      background-image: linear-gradient(#273463, black); }
   .card__picture {
     background-size: cover;
     height: 23rem;
@@ -616,10 +648,9 @@ h2 {
   .card__cta {
     position: relative;
     top: 0%;
-    left: 0;
+    left: 92%;
     transform: translate(0);
-    width: auto;
-    padding: 7rem 4rem 4rem 4rem; }
+    width: auto; }
   @media only screen and (max-width: 56.25em) {
     .card {
       height: auto;
@@ -629,14 +660,7 @@ h2 {
       .card__side {
         height: auto;
         position: relative;
-        box-shadow: none; }
-      .card__cta {
-        position: relative;
-        top: 0%;
-        left: 0;
-        transform: translate(0);
-        width: 100%;
-        padding: 7rem 4rem 4rem 4rem; } }
+        box-shadow: none; } }
 
 .expand--1 {
   height: 68vh; }
