--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -3,3 +3,21 @@ h2 {
 	font-size: 3rem;
 	text-transform: uppercase;
 }
+
+h3 {
+	text-align: center;
+	font-size: 2.3rem;
+	text-transform: uppercase;
+}
+
+h4 {
+	text-align: center;
+	font-size: 1.9rem;
+	text-transform: uppercase;
+}
+
+h5 {
+	text-align: center;
+	font-size: 1.6rem;
+	text-transform: uppercase;
+}
