--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,71 +1,5 @@
-	<!-- Header -->
-	<%- include ("header/header") -%>
-	<!-- End of Header-->
-
-	<!-- Body container starts here -->
-	<body class="container"> 
-
-		<!-- Navbar (sit on top) -->
-		<%- include ("header/nav") -%>
-		<!-- End of Navbar -->
-		
-		<!-- type writer effect -->
-		<%- include("header/typewriter") -%> 
-		<!-- End of Typewriter -->
-		
-		<!-- header slides -->
-		<%- include("header/slider") -%> 
-		<!-- End of Slider header -->
-
-		<!-- <div class="buttons">
-			<button id="prev" class="leftButton"><i class="fas fa-chevron-left"></i></button>
-			<button id="next" class="rightButton "><i class="fas fa-chevron-right"></i></button>
-		</div> -->
-		
-		<!-- Service cards -->
-		<%- include("body/service") -%> 
-		<!-- End of Service cards -->
-		
-		<!-- Gallery -->     
-		<%- include("body/gallery") -%>
-		<!-- End of Gallery -->
-
-		<!-- The Modal for Gallery -->
-		<%- include("body/modal") -%> 
-		<!-- End of Modal for Gallery -->
-
-		
-		<!-- Testimonial -->
-		<%- include("body/testimonial") -%> 
-		<!-- End of Testimonial -->
-		
-		<!--	About us Section -->
-		<%- include("body/about") -%> 
-		<!-- About us Section End -->
-		<!-- Image of location/map -->
-		<!-- End page content -->
-
-		<!-- Footer -->
-		<%- include("footer/footer") -%> 
-		<!-- End of Footer -->
-
-		
-		<!-- Start of Form -->
-		<% if(!submit) { %>
-			<%- include ("footer/form") -%>
-		<% } else { %>
-			<%- include ("footer/submitForm") -%>
-		<% } %>
-		<!-- End of Form-->
-
-		<!-- Social Info -->
-		<%- include("footer/social") -%> 
-		<!-- End of Social Info -->
-		<!-- End of Footer -->
-
-		<!-- Scripts -->
-		<%- include("partials/scripts") -%> 
-		<!-- End of Scripts -->
-
-	</body>
-</html>
+<%- include ("partials/header") -%>
+<!-- Scripts -->
+<%- include("partials/scripts") -%> 
+<!-- End of Scripts -->
+<%- include ("partials/footer") -%>
