--- a/views/pages/testimonials.ejs
+++ b/views/pages/testimonials.ejs
@@ -1,3 +1,4 @@
+<%- include ("../partials/header") -%>
 <div class="testimonial__header header__style" id="testimonial">
   <!-- intersection observer -->
   <h2 class="title">Testimonial</h2>
@@ -62,3 +63,4 @@
     </figure>
   </div>
 </section>
+<%- include ("../partials/footer") -%>
