--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -120,6 +120,10 @@ body {
 			[col-start] minmax(min-content, 14rem) [col-end]
 		)
 		[center-end] minmax(6rem, 1fr) [grid-end];
+	
+	@media only screen and (max-width: $bp-medium) {
+		grid-template-rows: min-content 80vh repeat(10, min-content);
+	}
 	/*gap: 1rem 1rem;*/
 }
 
