--- a/public/sass/components/_button.scss
+++ b/public/sass/components/_button.scss
@@ -82,3 +82,14 @@
 		border-color: #000;
 	}
 }
+
+#form-button {
+	width: 100%;
+}
+
+#main-button {
+	width: 40%;
+	@media only screen and (max-width: $bp-small) {
+		width: 50%;
+	}
+}
