--- a/views/pages/about-us.ejs
+++ b/views/pages/about-us.ejs
@@ -1,3 +1,4 @@
+<%- include ("../partials/header") -%>
 <div class="about__header header__style" id="about">
   <!-- intersection observer -->
   <h2 class="title">About Us</h2>
@@ -27,3 +28,5 @@
     <strong class="licence__info">License # 1002460</strong>
   </div>
 </section>
+
+<%- include ("../partials/footer") -%>
