--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -1,3 +1,4 @@
+<%- include ("../partials/header") -%>
 <div class="service__header header__style" id="services">
   <!-- intersection observer -->
   <h2 class="title">Services</h2>
@@ -153,3 +154,4 @@
       </div>
     </div>
 </section>
+<%- include ("../partials/footer") -%>
