fixed navbar ( before was mobile first now its desktop first ) added some javascript function to handle the hamburger pages are not seperated

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,15 @@ h5 {
   font-size: 1.6rem;
   text-transform: uppercase; }
 
+a {
+  text-decoration-line: none;
+  color: #000;
+  color: black; }
+  @media only screen and (max-width: 50em) {
+    a {
+      color: #fff;
+      color: white; } }
+
 @keyframes zoom {
   from {
     transform: scale(0.1); }
@@ -128,18 +137,26 @@ h5 {
 .nav-toggle {
   position: absolute !important;
   top: -9999px !important;
-  left: -9999px !important; }
+  left: -9999px !important;
+  display: none; }
+  @media only screen and (max-width: 50em) {
+    .nav-toggle {
+      display: flex; } }
   .nav-toggle:focus ~ .nav-toggle-label {
     outline: 2px solid rgba(173, 216, 230, 0.75); }
   .nav-toggle-label {
     position: absolute;
     top: 0;
-    right: 6rem;
+    right: 0;
     margin: 2rem 0 0 0;
     padding: 0 1rem;
     height: 50%;
     display: flex;
-    align-items: center; }
+    align-items: center;
+    transform: translateY(-6rem); }
+    @media only screen and (max-width: 50em) {
+      .nav-toggle-label {
+        transform: translateX(-2rem); } }
 
 .nav-toggle-label span,
 .nav-toggle-label span::before,
@@ -170,18 +187,40 @@ h5 {
 .nav {
   position: relative;
   padding-right: 6rem; }
-  .nav__list {
-    list-style: none;
-    font-size: 2rem;
-    display: flex; }
-    @media only screen and (max-width: 50em) {
-      .nav__list {
-        position: absolute;
-        right: 0;
-        top: -25rem;
-        flex-direction: column; } }
-    .nav__list--item {
-      padding: 0 0.7rem; }
+
+.nav__list {
+  list-style: none;
+  font-size: 2rem;
+  display: flex;
+  transition: all 0.5s; }
+  @media only screen and (max-width: 50em) {
+    .nav__list {
+      width: 100vw;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transform: translateY(-25rem);
+      flex-direction: column;
+      align-items: center;
+      font-size: 1.75rem;
+      letter-spacing: 0.3rem;
+      color: white; } }
+  .nav__list--item {
+    padding: 0 0.7rem;
+    border-radius: 5px;
+    transition: all 0.2s; }
+    .nav__list--item:hover {
+      background-image: linear-gradient(90deg, var(--orange-linear) 20%, var(--yellow-linear) 80%);
+      box-shadow: 0 0 1px black; }
+      @media only screen and (max-width: 50em) {
+        .nav__list--item:hover {
+          box-shadow: none; } }
+
+.hamburger {
+  transform: translateY(3.2rem); }
+
+.hamburger-title {
+  transform: translateY(20rem); }
 
 /* The Modal (background) */
 .modal {
@@ -269,8 +308,6 @@ h5 {
   background: pink; }
 
 .slider {
-  grid-column: 1 / -1;
-  grid-row: 1 / 3;
   position: relative;
   overflow: hidden;
   height: 100%;
@@ -306,9 +343,9 @@ h5 {
   background: url("..//..//img/gal-9.jpeg") no-repeat center center/cover; }
 
 .typewriter__container {
-  position: relative;
-  grid-row: 2 / 3;
-  grid-column: 1 / -1;
+  position: absolute;
+  top: 0%;
+  left: 0%;
   margin: 0;
   z-index: 1;
   display: flex;
@@ -375,6 +412,9 @@ h5 {
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.9), rgba(39, 52, 99, 0.9));
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+
+.title {
+  transition: all 0.5s; }
 
 .btn {
   display: inline-block;
