--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include ("partials/header") -%>
 <!-- Scripts -->
-<%- include("partials/scripts") -%> 
+
+<%- include ("pages/home.ejs") -%>
 <!-- End of Scripts -->
+<script src="/src/components/slider.js"></script>
 <%- include ("partials/footer") -%>
