--- a/views/pages/gallery.ejs
+++ b/views/pages/gallery.ejs
@@ -23,5 +23,5 @@
   </section>
 </div>
 <%- include ("../partials/modal") -%>
-<script src="../../public/src/components/gallery.js"></script>
+<script src="src/components/gallery.js"></script>
 <%- include ("../partials/footer") -%>
