--- a/views/partials/typewriter.ejs
+++ b/views/partials/typewriter.ejs
@@ -6,14 +6,7 @@
   </h1>
   
   <br>
-  <% if(!submit) { %>
     <h3 class="typewriter--header2">Contact Us!</h3>
     <br>
-    <a class="btn btn-generic" id="main-button" href="#contact">Contact</a>
-  <% } else { %>
-    <h3>Thanks for submitting!
-      <br>
-      We will contact you shortly
-    </h3>
-  <% } %>
+    <a class="btn btn-generic" id="main-button" href="/contact">Contact</a>
 </div>
