--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -21,3 +21,13 @@ h5 {
 	font-size: 1.6rem;
 	text-transform: uppercase;
 }
+
+a {
+	text-decoration-line: none;
+	color: #000;
+	color: rgb(0, 0, 0);
+	@media only screen and (max-width: $bp-medium) {
+		color: #fff;
+		color: rgb(255, 255, 255);
+	}
+}
