--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -231,6 +231,10 @@
 	position: absolute !important;
 	top: -9999px !important;
 	left: -9999px !important;
+	display: none;
+	@media only screen and (max-width: $bp-medium) {
+		display: flex;
+	}
 
 	&:focus ~ .nav-toggle-label {
 		outline: 2px solid rgba(lightblue, 0.75);
@@ -239,14 +243,18 @@
 	&-label {
 		position: absolute;
 		top: 0;
-		right: 6rem;
-		// left: 90vw;
-		// left: 0;
+		right: 0;
 		margin: 2rem 0 0 0;
 		padding: 0 1rem;
 		height: 50%;
 		display: flex;
 		align-items: center;
+
+		transform: translateY(-6rem);
+
+		@media only screen and (max-width: $bp-medium) {
+			transform: translateX(-2rem);
+		}
 	}
 }
 
@@ -288,21 +296,59 @@
 
 	// need padding bc of justify-content: space-between
 	padding-right: 6rem;
-	&__list {
-		list-style: none;
-		font-size: 2rem;
+}
 
-		display: flex;
+.nav__list {
+	list-style: none;
+	font-size: 2rem;
+	display: flex;
 
-		@media only screen and (max-width: $bp-medium) {
-			position: absolute;
-			right: 0;
-			top: -25rem;
-			flex-direction: column;
-		}
+	transition: all 0.5s;
 
-		&--item {
-			padding: 0 0.7rem;
+	@media only screen and (max-width: $bp-medium) {
+		width: 100vw;
+		position: absolute;
+		right: 0;
+		// top: -25rem;
+		top: 0;
+		transform: translateY(-25rem);
+		flex-direction: column;
+		align-items: center;
+
+		font-size: 1.75rem;
+		letter-spacing: 0.3rem;
+		color: white;
+	}
+
+	&--item {
+		padding: 0 0.7rem;
+		border-radius: 5px;
+		transition: all 0.2s;
+		&:hover {
+			background-image: linear-gradient(
+				90deg,
+				var(--orange-linear) 20%,
+				var(--yellow-linear) 80%
+			);
+			box-shadow: 0 0 1px black;
+			@media only screen and (max-width: $bp-medium) {
+				box-shadow: none;
+			}
 		}
 	}
+}
+
+// used for event click for hamburger
+.hamburger {
+	// top: 3.2rem;
+	transform: translateY(3.2rem);
+	// background-image: linear-gradient(
+	// 	to right bottom,
+	// 	rgba(0, 0, 0, 0.9),
+	// 	rgba(39, 52, 99, 0.9)
+	// );
+}
+
+.hamburger-title {
+	transform: translateY(20rem);
 }
