--- a/public/sass/components/_typewriter.scss
+++ b/public/sass/components/_typewriter.scss
@@ -1,10 +1,7 @@
 .typewriter__container {
-	// position: absolute;
-	// top: 0%;
-	// left: 0%;
-	position: relative;
-	grid-row: 2 / 3;
-	grid-column: 1 / -1;
+	position: absolute;
+	top: 0%;
+	left: 0%;
 	margin: 0;
 
 	z-index: 1;
