--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -1,4 +1,4 @@
 <!-- <script src="/src/components/typewriter.js"></script> -->
-<script src="/src/components/slider.js"></script>
+<!-- <script src="/src/components/slider.js"></script> -->
 <!-- <script src="/src/intersectionObservers/titleObserver.js"></script> -->
-<script src="/src/expandServiceCards/expand.js"></script>
+<!-- <script src="/src/expandServiceCards/expand.js"></script> -->
